+ galerei, +hom, aktualizacii

--- a/Arsen'jev_(lidn).mw
+++ b/Arsen'jev_(lidn).mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Arsen'jevan lidnanznam
  | Flag text = Arsen'jevan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 52,767
- | Voz' = 2017
+ | Eläjiden lugu = 51,723
+ | Voz' = 2021
  | Pind = 39.37
  | Fail = Арсеньев вид с Обзорной.JPG
- | Pämez' = Aleksandr Koval'<br />(sulaku 2017—)
+ | Pämez' = Vladimir Piven'<br />(heinku 2018—)
  | Telefonkod = +7-42361-xx-xxx
  | Avtokod = 25. 125
  | Aigvö = [[UTC]]+10 (MSK+7)
@@ -22,12 +22,26 @@ Eländpunktan aluz om pandud vl 1902 kuti Semönovk-žilo ({{lang-ru|село С
 == Geografijan andmused ==
 Lidn sijadase Arsen'jevk-jogen oiktal randpolel (aborigenine nimi om ''Hue'', [[Ussuri]]n hura ližajogi), 170 m ü.m.t. keskmäižel korktusel. Sambnu Obzornai-vulkan ({{lang-ru|сопка Обзорная}}, 876 m) da [[Sihote Alin']]-mägisel'gan pautked seištas lidnan ümbrištos, suvipäivnouzmha lidnaspäi. Matkad [[Vladivostok]]hasai om 160 km suvipäivlaskmha orhal vai 250 km avtotedme. Lähembaine lidn om [[Spassk Dal'nii]] 62 km lodeheze orhal vai 110 km avtotedme.
 
-Arsen'jev om lidnümbrikon üks'jäine eländpunkt. Lidnümbrikon pind — 90,74 km².
+Arsen'jev om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad da ižanduz ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 56 750 ristitud. Kaikiš suremb ristitišt oli vl 1992 — 71 500 eläjad.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 56 750 ristitud. Kaikiš suremb ristitišt oli 71 500 eläjad vl 1992.
 
-Ižandusen päsarakod oma aviasauvomine («Ka»-punolendimiden pästand) da sömtegimišt. Mererandaline industrialine kolledž i [[Edahaižen Päivnouzmman federaline universitet|EPFU:n]] kolledž (enzne aviatehnikum) oma professionaližen opendusen aluzkundoikš.
+Ižandusen päsarakod oma aviasauvomine («Ka»-punolendimiden pästand «Progress»-kompanijal), laivarmaturan tehmine («Askol'd»-tegim) i sömtegimišt (leibänkombinat, maidkombinat, vastegim, jauhtegesiden i maploduiden ümbriradmižen edheotandad).
+
+Mererandaline industrialine kolledž<ref>[http://arspik.ru/ Mererandaližen industrialižen kolledžan sait (''arspik.ru'').] {{ref-ru}}</ref> i [[Edahaižen Päivnouzmman federaline universitet|EPFU:n]] kolledž (enzne aviatehnikum) oma professionaližen opendusen aluzkundoikš.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Выдающемуся исследователю Дальнего Востока Владимиру Клавдиевичу Арсеньеву.jpg|Muštnik Vladimir Arsenjevale lidnan röunal (2013)
+ГородАрсеньев, Благовещенский храм.jpg|Jumalanmaman Blagoveššenjan kafedraline päjumalanpert', vn 2011 nägu
+Город Арсеньев, завод Прогресс.jpg|«Progress»-tegimen administracijan sauvuz vl 2010
+Дворец культуры завода Прогресс, город Арсеньев.JPG|«Progress»-tegimen kul'turkeskuz (2010)
+Monument Dersu Uzala in Arsenyev.jpg|Monument Dersu Uzalan muštoks — čomamahtoine mel'kuva (2012)
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.ars.town/ Arsen'jev-lidnan tobmuden aluzkundoiden oficialine sait (''ars.town'').] {{ref-ru}}
