*Empty MediaWiki Message*

--- a/Arsen'jev_(lidn).mw
+++ b/Arsen'jev_(lidn).mw
@@ -33,7 +33,7 @@ Mererandaline industrialine kolledž<ref>[http://arspik.ru/ Mererandaližen indu
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
-Выдающемуся исследователю Дальнего Востока Владимиру Клавдиевичу Арсеньеву.jpg|Muštnik Vladimir Arsenjevale lidnan röunal (2013)
+Выдающемуся исследователю Дальнего Востока Владимиру Клавдиевичу Арсеньеву.jpg|Muštnik Vladimir Arsen'jevale lidnan röunal (2013)
 ГородАрсеньев, Благовещенский храм.jpg|Jumalanmaman Blagoveššenjan kafedraline päjumalanpert', vn 2011 nägu
 Город Арсеньев, завод Прогресс.jpg|«Progress»-tegimen administracijan sauvuz vl 2010
 Дворец культуры завода Прогресс, город Арсеньев.JPG|«Progress»-tegimen kul'turkeskuz (2010)
