--- a/Araban_Ühtenzoittud_Emiratoiden_dirham.mw
+++ b/Araban_Ühtenzoittud_Emiratoiden_dirham.mw
@@ -2,7 +2,7 @@
 
 Dirham vajehti [[kataran i dubain rijal]]ad 1:1 rindatusenke, se rijal oli kävutandas kaikiš emiratoiš [[Abu Dabi]]š päiči vspäi 1966. Dirham vajehti [[bahreinan dinar]]ad Abu Dabiš 1 dirham = 0,1 dinarad kursan mödhe.
 
-1 dirham = 100 filsad (''فلس''). Valütkod om ''AED''. Simvolad: د.إ , Dh. Valütan regulätor om AÜE:n Keskuzbank.
+1 dirham = 100 filsad (''فلس''). Valütkod om ''AED''. Simvolad: د.إ , Dh. Valütan regulätor om AÜE:n Keskuzbank.<ref>[http://centralbank.ae/ AÜE:n Keskuzbankan sait (''centralbank.ae'')] {{ref-en}}</ref>
 
 Nened nominalad kävudas: rahuded — 25, 50 filsad i 1 dirham; banknotad — 5, 10, 20, 50, 100, 200, 500, 1000 dirhamad.
 
