--- a/Söm.mw
+++ b/Söm.mw
@@ -4,7 +4,7 @@
 
 Otandan südäimehe process om sömine, sen jäl'ghe sömänsulatand zavodiše. Söm om tarbhaine täutmaha hibjan energijan varoid i [[metabolizm]]an himižiden reakcijoiden täht. Mülütab nenid substancijoid: [[vauktušad]], [[razvad]], [[hil'vezikod]], [[vitaminad]], [[mineralad]] i [[mikroelementad]]. Hibj kazvab, kändase täuz'kaznudeks da eläb toižen [[ontogenez]]an kal't.
 
-Jagadas sömid augotižlibundan mödhe: [[kazmused|kazmusišpäi]] i [[živatad|živatoišpäi]]. Ku söm kogoneb produktoišpäi vaiše ühtenke augotižlibundanke, ka nimitadas sidä [[diet]]aks: [[vegetarižuz]], lihadiet, maiddiet da toižed.
+Jagadas sömid augotižlibundan mödhe: [[kazmused|kazmusišpäi]] i [[živatad|živatoišpäi]]. Ku söm kogoneb produktoišpäi vaiše ühtenke augotižlibundanke, ka nimitadas sidä [[diet]]aks: [[vegetarižuz]], lihadiet, maiddiet da toižed. Ičeze [[energine arvuz]] om sömän kaikuččel toižendal.
 
 [[Kulinarii]] om sömän vaumičendan (slokostindan) tedo. Söte om söm kodikoittud živatoiden täht. [[Sömtegimišt]] pästab sömtavaroid [[maižanduz|maižandusen]] da erasiden toižiden sarakoiden pol'fabrikatoišpäi.
 
