--- a/Söm.mw
+++ b/Söm.mw
@@ -1,12 +1,12 @@
 {{1000}}{{A10000}}
 [[Fail:Foods.jpg|thumb|right|250px|Erazvuiččed sömäd]]
-'''Söm''' om kaik, mi sättub [[sönd]]ale i [[jond]]ale [[živatad|eläjiden organizmoiden]] täht. 
+'''Söm''' om kaik, mi sättub [[sönd]]ale i [[jond]]ale [[živatad|eläjiden organizmoiden]] täht.
 
-Otandan südäimehe process om sömine, sen jäl'ghe sömänsulatand zavodiše. Söm om tarbhaine täutmaha hibjan energijan varoid i [[metabolizm]]an himižiden reakcijoiden täht. Mülütab nenid substancijoid: [[vauktušad]], [[razvad]], [[hil'vezikod]], [[vitaminad]], [[mineralad]] i [[mikroelementad]]. Hibj kazvab, kändase täuz'kaznudeks da eläb toižen [[ontogenez]]an kal't.
+Otandan südäimehe process om sömine, sen jäl'ghe sömänsulatand zavodiše. ''[[Söte]]'' kävutase kodikoittud živatoiden sömižen täht. Söm om tarbhaine täutmaha hibjan energijan varoid i [[metabolizm]]an himižiden reakcijoiden täht. Mülütab nenid substancijoid: [[vauktušad]], [[razvad]], [[hil'vezikod]], [[vitaminad]], [[mineralad]] i [[mikroelementad]]. Hibj kazvab, kändase täuz'kaznudeks da eläb toižen [[ontogenez]]an kal't.
 
 Jagadas sömid augotižlibundan mödhe: [[kazmused|kazmusišpäi]] i [[živatad|živatoišpäi]]. Ku söm kogoneb produktoišpäi vaiše ühtenke augotižlibundanke, ka nimitadas sidä [[diet]]aks: [[vegetarižuz]], lihadiet, maiddiet da toižed. Ičeze [[energine arvuz]] om sömän kaikuččel toižendal.
 
-[[Kulinarii]] om sömän vaumičendan (slokostindan) tedo. Söte om söm kodikoittud živatoiden täht. [[Sömtegimišt]] pästab sömtavaroid [[maižanduz|maižandusen]] da erasiden toižiden sarakoiden pol'fabrikatoišpäi.
+[[Kulinarii]] om sömän vaumičendan (slokostindan) tedo. Söte om söm kodikoittud živatoiden täht. [[Sömtegimišt]] pästab sömtavaroid [[maižanduz|maižandusen]] da erasiden toižiden sarakoiden pol'fabrikatoišpäi. Istorižikš [[mectuz]] da poimind oliba sömän samižen päižikš purtkikš, ned processad oma kaičenus tähäsai külälaižil, erasiden igähižiden rahvahiden elon aluz.
 
 == Homaičendad ==
 <references />
