--- a/Söm.mw
+++ b/Söm.mw
@@ -6,7 +6,9 @@ Otandan südäimehe process om sömine, sen jäl'ghe sömänsulatand zavodiše. 
 
 Jagadas sömid augotižlibundan mödhe: [[kazmused|kazmusišpäi]] i [[živatad|živatoišpäi]]. Ku söm kogoneb produktoišpäi vaiše ühtenke augotižlibundanke, ka nimitadas sidä [[diet]]aks: [[vegetarižuz]], lihadiet, maiddiet da toižed. Ičeze [[energine arvuz]] om sömän kaikuččel toižendal.
 
-[[Kulinarii]] om sömän vaumičendan (slokostindan) tedo. Söte om söm kodikoittud živatoiden täht. [[Sömtegimišt]] pästab sömtavaroid [[maižanduz|maižandusen]] da erasiden toižiden sarakoiden pol'fabrikatoišpäi. Istorižikš [[mectuz]] da poimind oliba sömän samižen päižikš purtkikš, ned processad oma kaičenus tähäsai külälaižil, erasiden igähižiden rahvahiden elon aluz.
+[[Kulinarii]] om sömän vaumičendan (slokostindan) tedo. [[Sömtegimišt]] pästab söndtavaroid [[maižanduz|maižandusen]] da erasiden toižiden sarakoiden pol'fabrikatoišpäi. Istorižikš [[mectuz]] da poimind oliba sömän samižen päižikš purtkikš, ned processad oma kaičenus tähäsai külälaižil, erasiden igähižiden rahvahiden elon aluz.
+
+Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid, fizižid redustoitajid substancijoid, kucujid läžundoid mikroorganizmoid (bakterijad, parazitad, virusad). Joga sömäl kožundan strok om olmas.
 
 == Homaičendad ==
 <references />
