--- a/Umeo.mw
+++ b/Umeo.mw
@@ -15,8 +15,12 @@
 }}
 '''Umeo''' ({{lang-sv|Umeå}} [ʉːmе.оː]) om lidn [[Ročinma]]n pohjoižpäivnouzmas. Se om [[Vesterbotten]]-agjan administrativine keskuz.
 
+== Istorii ==
 Eländpunkt mainitase ezmäižen kerdan vodel 1314. Kadoi 1590-nzil vozil, no sen aluz om pandud tošti vl 1622 lidnan statusanke.
 
+Lidn šingotase [[Umeon universitet]]al vspäi 1965 (28 tuhad üläopenikoid, järed kirjišt). Universitet tegeb tedoidusid biologijan, medicinan i ekologijan sferiš. «[[Volvo]] Trucks»-kompanijan tegim pästab kabinoid jüguavtoiden täht. Japonižen «[[Komatsu]] Forest AB»-edheotandan päfater radab Umeos vspäi 2004 (mecmašiništon pästand).
+
+== Geografijan andmused ==
 Lidn sijadase Umeel'ven-jogen randal, 12 m ü.m.t. keskmäižel korktusel. Meriport radab ezilidnas.
 
 Vl 2010 lidnan eläjiden lugu oli 79 594 ristitud.
