*Empty MediaWiki Message*

--- a/Estinma.mw
+++ b/Estinma.mw
@@ -20,9 +20,20 @@
 | Aigvö = tal'vel [[UTC]]+2,<br/>kezal [[UTC]]+3
 }}
 [[Fail:Drone video of Estonia 2021.webm|thumb|right|Estinman erazvuiččed tahod vn 2021 keväz'kus-tal'vkus. Videon hätkeližuz om 3 min 42 s]]
-'''Estinma''' ({{lang-et|Eesti}}), täuz' oficialine nimi — '''Estinman Tazovaldkund''' ({{lang-et|Eesti Vabariik}}), om [[Pohjoiževrop]]an valdkundaks, sijadase [[Baltijan meri|Baltijan meren]] randal. Sen pälidn da kaikiš suremb lidn om [[Tallidn]].
+'''Estinma''' ({{lang-et|Eesti}}), täuz' oficialine nimi — '''Estinman Tazovaldkund''' ({{lang-et|Eesti Vabariik}}), om [[Pohjoiževrop]]an valdkund, kudamb sijadase [[Baltijan meri|Baltijan meren]] randal; sen pohjoižes om [[Suomen laht]], suvi-päivlaskmas — [[Rig|Rigan]] laht. Röunad oma: [[Venäma]] — pävnouzmas (piduz om 324 km), [[Latvii]] — suves (piduz om 333 km); sen ližaks, om merine röun [[Suomenma|Suomenmanke]] suves. Man pind om 45 227 km<sup>2</sup>, eläjiden ühthine lugu — 1 330 068 ristitud; ninga Estinma seižub 129. tahos mal'mas (29. [[Evrop|Evropas]]) pindan mödhe da 158. (34. Evropas) ristitišton mödhe, kaikiš penemb Baltijan maiden keskes. Pälidn da kaikiš suremb lidn om [[Tallidn]].
 
 Vspäi 2004 Estinma om [[Evropan Ühtištuz|EÜ:n]] da [[Pohjoižatlantižen kožundkirjutesen organizacii|PAKO:n]] ühtnii.
+
+Oficialine kel' om [[estin kel']], raha om [[evro]]. 
+
+== Nimitusen augotižlibund ==
+Edes XVIII—XIX voz'sadoid man eläjad kucuiba ičtaze ''maarahvas'':aks, vai «man rahvaz», sikš ku heiden päine azj [[maižanduz]] oli. Sana ''eestlane'' tuli [[Latinan kel'|latinan]] kelelpäi (''Aesti''-sanalpäi). Ninga [[Publii Kornelii Tacit]] nimiti «Saksanman» (Baltijan meren randal) eläjad rahvahad.
+
+Amuižed [[Skandinavii|skandinavižed]] sagad (''Eistland'') mainitas ''Eistland''-nimižen man — ninga Estinma nimitase [[Ispanijan kel'|islandijan kelel]] nügüd'-ki, mi om [[Danijan kel'|danijan]], [[Saksan kel'|saksan]], [[Alaman kel'|alaman]], [[Ročin kel'|ročin]] da [[Norvegijan kel'|norvegijan]] man nimitusen kartte (''Estland''). Latinan keližiš aigaližiš purtkiš voib nähta ''Estia-'' da ''Hestia''-nimitused mugažo.
+
+Vl. 1918 ma tedoti ičeze ripmatomut da sai ''Esthonia''-nimitusen. 1920. da 1934. voziden konstitucijiden mödhe mal «Estinman Tazovaldkund»-nimituz oli. Vl. 1940., konz ma oli [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištusen]] (NSTÜ) ühtnijan, sündui Estin Nevondkundaline Socialistine Tazovaldkund; vl. 1991, konz NSTÜ čihozi, vanh nimituz — Estinman Tazovaldkund — pörtihe.
+
+''Estland''/''Eistland''-nimituz om sidodud amuižskandivižihe ''aust-'', ''austr''-sanoihe nacein; se znamoičeb «päivnouzm»
 
 == Istorii ==
 Estinma sai ripmatomut ezmäižen kerdan vn 1918 24. päiväl uhokud [[Venäman imperii|Venäman imperijan]] čihodamižen satuseks. Oli okkupiruidud i mülütadud tazovaldkundaks [[Nevondkundaline Ühtištuz|NSTÜ:hü]] vn 1940 6. päiväl elokud. Vn 1991 20. päiväl elokud Estinma tedištoiti ičeze ripmatomuden udessündutandas.
