*Empty MediaWiki Message*

--- a/Estinma.mw
+++ b/Estinma.mw
@@ -20,7 +20,7 @@
 | Aigvö = tal'vel [[UTC]]+2,<br/>kezal [[UTC]]+3
 }}
 [[Fail:Drone video of Estonia 2021.webm|thumb|right|Estinman erazvuiččed tahod vn 2021 keväz'kus-tal'vkus. Videon hätkeližuz om 3 min 42 s]]
-'''Estinma''' ({{lang-et|Eesti}}), täuz' oficialine nimi — '''Estinman Tazovaldkund''' ({{lang-et|Eesti Vabariik}}), om [[Pohjoiževrop]]an valdkund, kudamb sijadase [[Baltijan meri|Baltijan meren]] randal; sen pohjoižes om [[Suomen laht]], suvi-päivlaskmas — [[Rig|Rigan]] laht. Röunad oma: [[Venäma]] — pävnouzmas (piduz om 324 km), [[Latvii]] — suves (piduz om 333 km); sen ližaks, om merine röun [[Suomenma|Suomenmanke]] suves. Man pind om 45 227 km<sup>2</sup>, eläjiden ühthine lugu — 1 330 068 ristitud; ninga Estinma seižub 129. tahos mal'mas (29. [[Evrop|Evropas]]) pindan mödhe da 158. (34. Evropas) ristitišton mödhe, kaikiš penemb Baltijan maiden keskes. Pälidn da kaikiš suremb lidn om [[Tallidn]].
+'''Estinma''' ({{lang-et|Eesti}}), täuz' oficialine nimi — '''Estinman Tazovaldkund''' ({{lang-et|Eesti Vabariik}}), om [[Pohjoiževrop]]an valdkund, kudamb sijadase [[Baltijan meri|Baltijan meren]] randal; sen pohjoižes om [[Suomen laht]], suvi-päivlaskmas — [[Rig|Rigan]] laht. Röunad oma: [[Venäma]] — pävnouzmas (piduz om 324 km), [[Latvii]] — suves (piduz om 333 km); sen ližaks, om merine röun [[Suomenma|Suomenmanke]] suves. Man pind om 45 227 km<sup>2</sup>, eläjiden ühthine lugu — 1 330 068 ristitud; ninga Estinma seižub 129. tahos mal'mas (29. [[Evrop|Evropas]]) pindan mödhe da 158. (34. Evropas) tahos ristitišton mödhe, kaikiš penemb Baltijan maiden keskes. Pälidn da kaikiš suremb lidn om [[Tallidn]].
 
 Vspäi 2004 Estinma om [[Evropan Ühtištuz|EÜ:n]] da [[Pohjoižatlantižen kožundkirjutesen organizacii|PAKO:n]] ühtnii.
 
