*Empty MediaWiki Message*

--- a/Estinma.mw
+++ b/Estinma.mw
@@ -29,7 +29,7 @@ Oficialine kel' om [[estin kel']], raha om [[evro]].
 == Nimitusen augotižlibund ==
 Edes XVIII—XIX voz'sadoid man eläjad kucuiba ičtaze ''maarahvas'':aks, vai «man rahvaz», sikš ku heiden päine azj [[maižanduz]] oli. Sana ''eestlane'' tuli [[Latinan kel'|latinan]] kelelpäi (''Aesti''-sanalpäi). Ninga [[Publii Kornelii Tacit]] nimiti «Saksanman» (Baltijan meren randal) eläjad rahvahad.
 
-Amuižed [[Skandinavii|skandinavižed]] sagad (''Eistland'') mainitas ''Eistland''-nimižen man — ninga Estinma nimitase [[Ispanijan kel'|islandijan kelel]] nügüd'-ki, mi om [[Danijan kel'|danijan]], [[Saksan kel'|saksan]], [[Alaman kel'|alaman]], [[Ročin kel'|ročin]] da [[Norvegijan kel'|norvegijan]] man nimitusen kartte (''Estland''). Latinan keližiš aigaližiš purtkiš voib nähta ''Estia-'' da ''Hestia''-nimitused mugažo.
+Amuižed [[Skandinavii|skandinavižed]] sagad mainitas ''Eistland''-nimižen man — ninga Estinma nimitase [[Ispanijan kel'|islandijan kelel]] nügüd'-ki, mi om [[Danijan kel'|danijan]], [[Saksan kel'|saksan]], [[Alaman kel'|alaman]], [[Ročin kel'|ročin]] da [[Norvegijan kel'|norvegijan]] man nimitusen kartte (''Estland''). Latinan keližiš aigaližiš purtkiš voib nähta ''Estia-'' da ''Hestia''-nimitused mugažo.
 
 Vl. 1918 ma tedoti ičeze ripmatomut da sai ''Esthonia''-nimitusen. 1920. da 1934. voziden konstitucijiden mödhe mal «Estinman Tazovaldkund»-nimituz oli. Vl. 1940., konz ma oli [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištusen]] (NSTÜ) ühtnijan, sündui Estin Nevondkundaline Socialistine Tazovaldkund; vl. 1991, konz NSTÜ čihozi, vanh nimituz — Estinman Tazovaldkund — pörtihe.
 
