--- a/Estinma.mw
+++ b/Estinma.mw
@@ -8,7 +8,7 @@
 | Pälidn = Tallidn
 | Eläjiden lugu = 1,244,288<ref>[https://www.cia.gov/library/publications/the-world-factbook/geos/en.html Estinman ristitišt // Mail'man faktoiden kirj. — ''Cia.gov''.] {{ref-en}}</ref>
 | Voz' = 2018
-| Pind = 45,228
+| Pind = 45,339
 | Kart = EU-Estonia.svg
 | Kel' = [[estin kel'|estin]]
 | Valdkundan pämez' = [[Karis Alar|Alar Karis]]
@@ -20,20 +20,24 @@
 | Aigvö = tal'vel [[UTC]]+2,<br/>kezal [[UTC]]+3
 }}
 [[Fail:Drone video of Estonia 2021.webm|thumb|right|Estinman erazvuiččed tahod vn 2021 keväz'kus-tal'vkus. Videon hätkeližuz om 3 min 42 s]]
-'''Estinma''' ({{lang-et|Eesti}}), täuz' oficialine nimi — '''Estinman Tazovaldkund''' ({{lang-et|Eesti Vabariik}}), om [[Pohjoiževrop]]an valdkund, kudamb sijadase [[Baltijan meri|Baltijan meren]] randal; sen pohjoižes om [[Suomen laht]], suvi-päivlaskmas — [[Rig|Rigan]] laht. Röunad oma: [[Venäma]] — pävnouzmas (piduz om 324 km), [[Latvii]] — suves (piduz om 333 km); sen ližaks, om merine röun [[Suomenma|Suomenmanke]] suves. Man pind om 45 227 km<sup>2</sup>, eläjiden ühthine lugu — 1 330 068 ristitud; ninga Estinma seižub 129. tahos mal'mas (29. [[Evrop|Evropas]]) pindan mödhe da 158. (34. Evropas) tahos ristitišton mödhe, kaikiš penemb Baltijan maiden keskes. Pälidn da kaikiš suremb lidn om [[Tallidn]].
+'''Estinma''' ({{lang-et|Eesti}}), täuz' oficialine nimi — '''Estinman Tazovaldkund''' ({{lang-et|Eesti Vabariik}}), om [[Pohjoiževrop]]an valdkund, se sijadase [[Baltijan meri|Baltijan meren]] päivnouzmaižel randal. Pälidn da kaikiš suremb lidn om [[Tallidn]].
+
+Valdkundan pind om 45 339 km², eläjiden ühthine lugu — 1 328 439 ristitud (vn 2022 augus). Estinma seižub 129. sijas mail'mas (29. [[Evrop]]as) pindan mödhe da 158. sijas (34. Evropas) ristitišton mödhe, kaikiš penemb Baltijan maiden keskes.
+
+[[Suomen laht]] om pohjoižhe Estinmaspäi, [[Rigan laht]] levitase suvipäivlaskmha. Röunad madme: [[Venäma]] — päivnouzmas (piduz om 324 km), [[Latvii]] — suves (piduz om 333 km). Niiden ližaks om meriröunad [[Suomenma]]nke suves.
 
 Vspäi 2004 Estinma om [[Evropan Ühtištuz|EÜ:n]] da [[Pohjoižatlantižen kožundkirjutesen organizacii|PAKO:n]] ühtnii.
 
 Oficialine kel' om [[estin kel']], raha om [[evro]]. 
 
 == Nimitusen augotižlibund ==
-Edes XVIII—XIX voz'sadoid man eläjad kucuiba ičtaze ''maarahvas'':aks, vai «man rahvaz», sikš ku heiden päine azj [[maižanduz]] oli. Sana ''eestlane'' tuli [[Latinan kel'|latinan]] kelelpäi (''Aesti''-sanalpäi); ninga [[Publii Kornelii Tacit]] nimiti «Saksanmas» (Baltijan meren randal) eläjad rahvahad.
+Edes 18.-19. voz'sadoid [[estilaižed|Estinman eläjiden]] ičeze nimituz oli ''maarahvas'', vai «man rahvaz», sikš miše heiden päine radmine oli [[maižanduz]]. ''Eestlane''-sana tuli [[latinan kel'|latinan]] kelen ''Aesti''-sanaspäi, ninga [[Publii Kornelii Tacit]] nimiti elänut «Saksanmas» (Baltijan meren randal) rahvast.
 
-Amuižed [[Skandinavii|skandinavižed]] sagad mainitadas ''Eistland''-nimižen man — ninga Estinma nimitase [[Ispanijan kel'|islandijan kelel]] nügüd'-ki, mi om [[Danijan kel'|danijan]], [[Saksan kel'|saksan]], [[Alaman kel'|alaman]], [[Ročin kel'|ročin]] da [[Norvegijan kel'|norvegijan]] man nimitusen kartte (''Estland''). Latinan keližiš aigaližiš purtkiš voib nähta ''Estia-'' da ''Hestia''-nimitused mugažo.
+Amuižed [[Skandinavii|skandinavižed]] sagad mainitadas mad ''Eistland''-nimenke. Ninga Estinma nimitase [[islandijan kel'|islandijan kelel]] nügüd'-ki, mi om man ''Estland''-nimitusen kartte [[danijan kel'|danijan]], [[saksan kel'|saksan]], [[alaman kel'|alaman]], [[ročin kel'|ročin]] i [[norvegijan kel'|norvegijan]] keliš. Latinankel'žiš aigaližiš purtkiš voib nähta ''Estia''- i ''Hestia''-nimitusid mugažo.
 
-Vl. 1918 ma tedoti ičeze ripmatomut da sai ''Esthonia''-nimitusen. 1920. da 1934. voziden konstitucijiden mödhe mal «Estinman Tazovaldkund»-nimituz oli. Vl. 1940., konz ma oli [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištusen]] (NSTÜ) ühtnijan, sündui Estin Nevondkundaline Socialistine Tazovaldkund; vl. 1991, konz NSTÜ čihozi, vanh nimituz — Estinman Tazovaldkund — pörtihe.
+Vl 1918 valdkund tedoti ičeze ripmatomudes da sai ''Esthonia''-nimitusen. Valdkundan nimituz oli «Estinman Tazovaldkund» oli voziden 1920 i 1934 konstitucijoiden mödhe. Vl 1940, konz Estinma oli [[Nevondkundaline Ühtištuz|NSTÜ:n]] ühtnijan, sündui «Estin Nevondkundaline Socialistine Tazovaldkund»-nimituz. Konz NSTÜ čihozi vl 1991, ka pörtihe vanhad nimitust — Estinman Tazovaldkund.
 
-''Estland''/''Eistland''-nimituz om sidodud amuižskandivižihe ''aust-'', ''austr''-sanoihe nacein; se znamoičeb «päivnouzm»
+''Estland / Eistland''-nimituz om sidodud amuižskandivižihe ''aust-'', ''austr''-sanoihe ezimeletaden, ned znamoitas «päivnouzm».
 
 == Istorii ==
 Estinma sai ripmatomut ezmäižen kerdan vn 1918 24. päiväl uhokud [[Venäman imperii|Venäman imperijan]] čihodamižen satuseks. Oli okkupiruidud i mülütadud tazovaldkundaks [[Nevondkundaline Ühtištuz|NSTÜ:hü]] vn 1940 6. päiväl elokud. Vn 1991 20. päiväl elokud Estinma tedištoiti ičeze ripmatomuden udessündutandas.
