--- a/Desnogorsk.mw
+++ b/Desnogorsk.mw
@@ -27,7 +27,9 @@ Lidn om ümbärtud [[Roslavlin rajon]]an territorijal. Se sijadase [[Desn (Dnepr
 Sosnovk-külä (35 rist. vl 2018) mülüb lidnümbrikho Desnogorskan ližaks. Lugetas kahesa nomeruidud mikrorajonad lidnas.
 
 == Eläjad ==
-Vl 1979 lidnan ristitišt oli 9 830 eläjad. Vn 2010 Venäman rahvahanlugemižen mödhe lidnan-lidnümbrikon eläjiden lugu oli 31 100 ristitud. Kaikiš suremb lidnan ristitišt oli 36..37 tuhad eläjid vll 1996−2001 (37 300 rist. vll 2000−2001). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman «Kaikiden gorähižiden ihastuz»-jumalaižen päjumalanpert' (2009), Ph. Stefan Permalaižen puine jumalanpert' (1997) i Sündun Eläbzdusen časoun' (kaumžoman territorijal, 2000) oma olmas lidnas.
+Vl 1979 lidnan ristitišt oli 9 830 eläjad. Vn 2010 Venäman rahvahanlugemižen mödhe lidnan-lidnümbrikon eläjiden lugu oli 31 100 ristitud. Kaikiš suremb lidnan ristitišt oli 36..37 tuhad eläjid vll 1996−2001 (37 300 rist. vll 2000−2001).
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman «Kaikiden gorähižiden ihastuz»-jumalaižen päjumalanpert' (2009), Ph. Stefan Permalaižen puine jumalanpert' (1997) i Sündun Eläbzdusen časoun' (kaumžoman territorijal, 2000) oma olmas lidnas.
 
 Rahvahad (2010): [[venälaižed]] — 92,5%, [[ukrainalaižed]] — 2,3%, [[vaugedvenälaižed]] — 2,0%, toižed rahvahad — 3,2%.
 
@@ -35,9 +37,9 @@ Professionaližen opendusen aluzkund om Desnogorskan energetine kolledž.<ref>[h
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
-"Хлеб нашей памяти". Открытие знака в Десногорске.jpg|«Meiden mušton leib»-znaman avaiduz. Päjumalanpert' om tagamal
-Smolensk NPP 2013-05-07.jpg|Smolenskan AES
 Курган славы - panoramio.jpg|Hoštusen käp
+Smolensk NPP 2013-05-07.jpg|Smolenskan AES
+Памятник семье - panoramio.jpg|Muštnik kanzale. Tervehtoitai i kul'turkeskuz om tagamal (2014)
 </gallery>
 
 == Homaičendad ==
