toine olii kuva

--- a/Lüdinovo.mw
+++ b/Lüdinovo.mw
@@ -29,7 +29,9 @@ Lidn sijadase rajonan keskuzpalan suves, kahten vezivaradimen i Nepolod'-jogen r
 Lüdinovo om lidnankundan üks'jäine eländpunkt, mugažo Kolotovk-külä kaikenaigaižeta ristitištota. Lidnankundan pind — 46,89 km².
 
 == Eläjad ==
-Vl 1939 lidnan ristitišt oli 17 581 eläjad. Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 40 530 ristitud, rajonan ühesa kümnendest. Kaikiš suremb lidnan ristitišt oli 44 700 eläjad vl 1992. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] koume pühäpertid<ref>[http://sobory.ru/geo/locat/944 Lüdinovon pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> i koume časounäd om olmas lidnas.
+Vl 1939 lidnan ristitišt oli 17 581 eläjad. Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 40 530 ristitud, rajonan ühesa kümnendest. Kaikiš suremb lidnan ristitišt oli 44 700 eläjad vl 1992.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] koume pühäpertid<ref>[http://sobory.ru/geo/locat/944 Lüdinovon pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> i koume časounäd om olmas lidnas.
 
 Rahvahad (2010): [[venälaižed]] — 96,9%, toižed rahvahad — 3,1%.
 
@@ -40,7 +42,7 @@ Professionaližen opendusen aluzkund om Lüdinovon industrialine tehnikum.<ref>[
 Людиново Церковь Казанской иконы Божией Матери 1.JPG|Jumalanmaman Kazanin jumalaižen pühäpert'<br />vl 2014
 Людиново Сукремльский чугуннолитейный и железоделательный завод 4.JPG|Sukremlin kaugedraudan valamižtegim
 Nabereznaya ludinovo.jpg|Lüdinovskoje (Lompad')-järven randird (2008)
-Ludinovo-I.jpg|Lüdinovo I-raudtestancii
+RZD Ludinovo-2 IMG 20190511 120034 1.jpg|Lüdinovo II-päraudtestancijan sauvuz vl 2019
 </gallery>
 
 == Homaičendad ==
