+ galerei, +hom, aktualizacii

--- a/Partizansk.mw
+++ b/Partizansk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Partizanskan lidnanznam
  | Flag text = Partizanskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 37,291
- | Voz' = 2017
- | Pind = 
- | Fail = Town hall of Partizansk.JPG
- | Pämez' = Aleksandr Zraževskii<br />(keväz'ku 2014—)
+ | Eläjiden lugu = 36,247
+ | Voz' = 2021
+ | Pind = 126
+ | Fail = Central Square of Partizansk.JPG
+ | Pämez' = Oleg Bondarev<br />(sulaku 2019—)
  | Telefonkod = +7-42363-xx-xxx
  | Avtokod = 25. 125
  | Aigvö = [[UTC]]+10 (MSK+7)
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1896 kuti ''Sučanan kaivuz''-žilo ({{lang-ru|Сучанский Рудник}}) samha [[kivihil'|kivihil't]], nimitihe jogen mödhe, sana kitajiženke augotižlibundanke. Vl 1932 žilo sai lidnan statusad ''Sučan''-nimenke. Udesnimitihe nügüdläižikš vn 1972 26. päiväl tal'vkud Rahvahanikoiden sodan vägevan partizanoiden likundan tagut neniš tahoiš.
 
-Lidn šingotihe kivihilen samižen järedaks keskuseks, saudihe koume omblendfabrikad, ladimensauvomižen, mecan ümbriradmižen i sömtegimišton edheotandoid, farmaceftine tegim radoi. Likvidiruihe kivihilen samižen sarakod vozil 1994−2004 (vl 2008 Uglekamenskas), sid' toižid tegimid. Nügüd'aigan Partizanskan GRES radab (vedadas hil't [[Nerüngri]]špäi), raudten edheotandad «Vladivostok — Nahotk»-jonol, metalližkonstrukcijoiden tegim, sömtegimišton edheotandad oma väges.
+Partizansk-lidn šingotihe kivihilen samižen järedaks keskuseks, saudihe koume omblendfabrikad, ladimensauvomižen, mecan ümbriradmižen i sömtegimišton edheotandoid, farmaceftine tegim radoi. Likvidiruihe kivihilen samižen sarakod vozil 1994−2004 (vl 2008 Uglekamenskas), sid' toižid tegimid. Nügüd'aigan Partizanskan GRES radab (vedadas hil't [[Nerüngri]]špäi), raudten edheotandad «Vladivostok — Nahotk»-jonol, metalližkonstrukcijoiden tegim, sömtegimišton edheotandad oma väges.
 
 == Geografijan andmused ==
 Lidn sijadase Partizanskai-jogen alangištos ({{lang-ru|Партизанская}}, ende Sučan), 140 m ü.m.t. keskmäižel korktusel, mäged ümbärtas lidnad. Lujad [[manrehkaiduz|manrehkaidused]] oleldas (vl 1933 — seičemeballaine). Matkad [[Vladivostok]]hasai om 95 km päivlaskmha orhal. Lähembaine lidn om [[Nahotk]] 50 km suvhe avtotedme.
@@ -27,9 +27,22 @@ Lidn sijadase Partizanskai-jogen alangištos ({{lang-ru|Партизанская
 Ühesa žilod, raudtestancii i raudtesarak mülüdas lidnümbrikho Partizanskan ližaks, sidä kesken Uglekamensk-žilo (3647 rist. vl 2010) i Avangard-žilo (2143 rist. vl 2010). Lidnümbrikon pind — 1288,61 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 38 659 ristitud, lidnümbrikon — 46 748 ristitud. Kaikiš suremb lidnan ristitišt oli vll 1959−2001, 46..50 tuhad (vl 1967 — 50 000 rist., vl 1992 — 49 900 rist.). Vl 2017 kaik 45 106 ristitud elädas lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 38 659 ristitud, lidnümbrikon — 46 748 ristitud. Kaikiš suremb lidnan ristitišt oli 46..50 tuhad vll 1959−2001 (50 000 rist. vl 1967, 49 900 rist. vl 1992). Vl 2017 kaik 37 291 ristitud elihe lidnas i 45 106 ristitud kaikes lidnümbrikos.
 
-Mererandaline äiprofil'ne kolledž (kaivuztehnikum enččel) om professionaližen opendusen aluzkundaks lidnas.
+Mererandaline äiprofil'ne kolledž<ref>[http://pmk.partizansk.org/ Mererandaližen äiprofil'žen kolledžan sait (''pmk.partizansk.org'').] {{ref-ru}}</ref> (kaivuztehnikum enččel) om professionaližen opendusen aluzkundaks lidnas.
+
+Lidnümbrikon edeline pämez' om Aleksandr Zraževskii (keväz'ku 2014 — semendku 2018).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Town hall of Partizansk.JPG|Lidnümbrikon administracijan sauvuz (2011)
+War memorial in Partizansk.JPG|[[Sur' Tatanmaine soda|Suren sodan]] memorialine kompleks, vn 2011 nägu
+Recreation center of Partizansk.JPG|Kul'turkeskuz (2011)
+Railway station of Partizansk.JPG|Partizanskan päraudtestancii vl 2011
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.partizansk.org/ Lidnan tobmuden aluzkundoiden oficialine sait (''partizansk.org'').] {{ref-ru}}
