*Empty MediaWiki Message*

--- a/Estinma.mw
+++ b/Estinma.mw
@@ -24,7 +24,7 @@
 
 Valdkundan pind om 45 339 km², eläjiden ühthine lugu — 1 328 439 ristitud (vn 2022 augus). Estinma seižub 129. sijas mail'mas (29. [[Evrop]]as) pindan mödhe da 158. sijas (34. Evropas) ristitišton mödhe, kaikiš penemb Baltijan maiden keskes.
 
-[[Suomen laht]] om pohjoižhe Estinmaspäi, [[Rigan laht]] levitase suvipäivlaskmha. Röunad madme: [[Venäma]] — päivnouzmas (piduz om 324 km), [[Latvii]] — suves (piduz om 333 km). Niiden ližaks om meriröunad [[Suomenma]]nke suves.
+[[Suomen laht]] om pohjoižhe Estinmaspäi, [[Rigan laht]] levitase suvipäivlaskmha. Röunad madme: [[Venäma]] — päivnouzmas (piduz om 324 km), [[Latvii]] — suves (piduz om 333 km). Niiden ližaks om meriröunad [[Suomenma]]nke pohjoižes.
 
 Vspäi 2004 Estinma om [[Evropan Ühtištuz|EÜ:n]] da [[Pohjoižatlantižen kožundkirjutesen organizacii|PAKO:n]] ühtnii.
 
