+ galerei, +hom, aktualizacii

--- a/Spassk_Dal'nii.mw
+++ b/Spassk_Dal'nii.mw
@@ -1,15 +1,15 @@
 {{Eländpunkt
  | Nimi = Spassk Dal'nii<br />Спасск-Дальний
- | Lidnanznam = Coat of Arms of Spassk (Primorsky kray).png
+ | Lidnanznam = Blason de Spassk 2003 (Primorsky kray).png
  | Flag = 
  | Lidnanznam text = Spassk Dal'nijan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 41,127
- | Voz' = 2017
+ | Eläjiden lugu = 39,311
+ | Voz' = 2021
  | Pind = 43.49
  | Fail = Спасск-Дальний 6.jpg
- | Pämez' = Väčeslav Kvon<br />(eloku 2016—)
+ | Pämez' = Andrei Bessonov<br />(keväz'ku 2020—)
  | Telefonkod = +7-42352-xx-xxx
  | Avtokod = 25. 125
  | Aigvö = [[UTC]]+10 (MSK+7)
@@ -27,12 +27,28 @@ Lidn sijadase [[Hankajärv]]en alangištos, peniden Kulešovkan i Spasovkan jogi
 Spassk Dal'nii om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 44 173 ristitud. Kaikiš suremb ristitišt oli 61 400 eläjad vl 1992. [[Hristanuskond]]an koume pühäpertid om lidnas da Spasskai-küläs.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 44 173 ristitud. Kaikiš suremb ristitišt oli 61 400 eläjad vl 1992.
 
-Professionaližen opendusen aluzkundad: Spasskan industrialiž-ekonomine kolledž, politehnine kolledž, pedagogine kolledž.
+[[Hristanuskond]]an koume pühäpertid om lidnas da Spasskai-küläs.
+
+Professionaližen opendusen aluzkundad: Spasskan industrialiž-ekonomine kolledž<ref>[http://siek25.ru/ Spasskan industrialiž-ekonomižen kolledžan sait (''siek25.ru'').] {{ref-ru}}</ref>, politehnine kolledž, pedagogine kolledž.
+
+Edeline lidnan pämez' om Väčeslav Kvon (eloku 2016 — uhoku 2020).
 
 == Transport ==
 Avtobusad oma kundaližeks transportaks lidnas. [[Transsib]]an ''Spassk Dal'nii-raudtestancii'' sijadase lidnan pohjoižpalas, ezilidnelektrojonused ajadas Vladivostokan ümbrišthosai. «Ussuri»-avtote (A-370) ümbärdab lidnad suvipäivnouzmaižeks röunaks. Avtote mäneb Hankajärvhesai, lebubazoidenke teverenno.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Спасск-Дальний 10.jpg|Torguindkeskused Sovetskai-irdal (2011)
+Спасск-Дальний 13.jpg|«Avrora»-kinoteatr (2011)
+Парадная ОАО "Спасскцемент" - panoramio.jpg|Cementtegim vl 2014
+Спасск-Дальний 7.jpg|Lotos-adivpert' (2011)
+Здание железнодорожного вокзала. Спасск-Дальний, Приморский край.jpg|Spassk Dal'nii-päraudtestancijan sauvuz vl 2020
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.spasskd.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''spasskd.ru'').] {{ref-ru}}
