--- a/Ussuriisk.mw
+++ b/Ussuriisk.mw
@@ -1,20 +1,19 @@
 {{Eländpunkt
  | Nimi = Ussuriisk<br />Уссурийск
  | Lidnanznam = Coat of Arms of Ussuriysk (Primorsky kray).png
- | Flag = 
+ | Flag = Flag of Ussuriysk (Primorsky kray).png
  | Lidnanznam text = Ussuriiskan lidnanznam
- | Flag text = 
+ | Flag text = Ussuriiskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 170,660
- | Voz' = 2017
+ | Eläjiden lugu = 172,942
+ | Voz' = 2021
  | Pind = 173
  | Fail = Уссурийск, ул. Некрасова.JPG
- | Pämez' = Nikolai Rud'<br />(sügüz'ku 2014—)
+ | Pämez' = Jevgenii Korž<br />(kül'mku 2019—)
  | Telefonkod = +7-4234-xxx-xxx
  | Avtokod = 25. 125
  | Aigvö = [[UTC]]+10 ([[MSK]]+7)
 }}
-[[Fail:RussianChurch Ussurisk.JPG|thumb|left|250px|Jumalanmaman katken pühäpert'.]]
 '''Ussuriisk''' ({{lang-ru|Уссурийск}}) om [[Venäma]]n lidn [[Merenrandaline rand|Merenrandaližen randan]] suvipäivlaskmas. Se om Ussuriiskan lidnümbrikon (vhesai 2005 — rajonan) administrativine keskuz, randan kahtenz' lidn eläjiden lugun mödhe.
 
 == Istorii ==
@@ -25,12 +24,28 @@ Ussuriisk šingotase sömtegimištol (sahar, maidproduktad, likörad da vin), ra
 == Geografijan andmused ==
 Lidn sijadase katl'uses, [[Hankanjärv|Hankanveren tazangištol]], sambnuziden vulkanoiden keskes, 33 m keskmäižel korktusel valdmeren pindan päl. Pened joged oma Rakovk i Komarovk, mülüdas [[Razdol'nai (jogi)|Razdol'nai-jogen]] ({{lang-zh|绥芬河}} ''Suifen'-He'') hurapol'žhe basseinha, se jokseb [[Amuran laht]]he läz Vladivostokad. Matkad [[Vladivostok]]hasai om 76 km suvhe orhal vai 97 km «Ussuri»-avtotedme (A370), [[Kitai]]n röunhasai — 50 km päivlaskmha orhal.
 
-Kaik 37 eländpunktad mülüdas lidnümbrikho Ussuriiskan ližaks: 2 žilod, 2 raudtestancijad da 33 küläd 9 territorijal.
+Kaik 37 eländpunktad mülüdas lidnümbrikho Ussuriiskan ližaks: kaks' žilod, kaks' raudtestancijad da 33 küläd ühesal territorijal. Lidnümbrikon pind om 3690 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 158 004 ristitud, lidnümbrikon — 184 046 ristitud. Vl 2017 196 863 ristitud elihe lidnümbrikos. Lidnan i lidnümbrikon kaikiš suremb ristitišt om nügüd' (vl 2017).
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 158 004 ristitud, lidnümbrikon — 184 046 ristitud. Vl 2017 kaik 170 660 ristitud elihe lidnas i 196 863 ristitud kaikes lidnümbrikos. Lidnan i lidnümbrikon kaikiš suremb ristitišt oli vl 2020: lidnas elihe 173 640 ristitud, kaikes lidnümbrikos — 199 341 ristitud.
 
 Rahvahad (lidnümbrik vl 2010, enamba 1%, ozutadud rahvahudenke): [[venälaižed]] — 91,0%, [[korejalaižed]] — 3,0%, [[ukrainalaižed]] — 2,4%, toižed rahvahad — 3,6%.
+
+Edeline lidnümbrikon pämez' om Nikolai Rud' (sügüz'ku 2014 — sügüz'ku 2019).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+439 военный госпиталь МО РФ Уссурийск.JPG|Kaičendministrusen sodaläžundkodi nomer 439 (2016)
+Здание Таможни на Ленина, 103 - panoramio.jpg|Muitan sauvuz (2013)
+RussianChurch Ussurisk.JPG|Jumalanmaman Katken jumalanpert', vn 2008 nägu (kivine om saudud vll 1907−1914)
+Рождественно-Богородицкий женский монастырь1.jpg|Jumalanmaman Sündundan naižjumalankodi, vn 2008 nägu
+Ussuriysk LRZ проходная.jpg|Ussuriiskan vedimenkohenduztegimen tulend vl 2011
+Здание сельхозинститута, проспект Блюхера, 44.jpg|Mererandaline valdkundaline maižanduzakademii (2010)
+Уссурийское суворовское военное училище фото2.JPG|Ussuriiskan suvorovan sodaškol (2013)
+Володарского,33 (1).png|Ussuriiskan lidnümbrikon dramteatr V. Komissarževskajan nimed (2017, ende Rahvahaline pert', om saudud vll 1907−1908)
+2013-09-19-499 Дума городская.jpg|Lapsiden läžundkodi (2013, ende Nevondkundoiden pert')
+Уссурийск здание вокзала в 2011 году.jpg|Ussuriisk-päraudtestancijan sauvuz vl 2011
+</gallery>
 
 == Irdkosketused ==
 * [http://www.дума-уссурийска.рф/ Lidnümbrikon Duman oficialine sait (''дума-уссурийска.рф'').] {{ref-ru}}
