--- a/Elo.mw
+++ b/Elo.mw
@@ -14,6 +14,12 @@ Nene tundused harakterizuidas eläbad materijad: [[organizm|organizacii]], [[sub
 
 Man irdpolel elo ei löudand, kosmine biologii tedoidab sen tundusid da gipotetižid formid. Ratud elo om olmas laboratorijan turuškastjoiš, ratud vauktušiš, mikroprocessoriš i robotoiš, no ristit ei voind säta elod auguspäi täuzin. [[Religii]] el'getab elod surman jäl'ghe (eläbzduz, toštmižsündund-reinkarnacii i surmanjäl'ghine andmine). Rideltas [[kolmatomuz|kolmatomuden]] ristitun i [[heng]]en olendas olmas.
 
+== Eloho sidotud vepsän muštatišed ==
+<blockquote>
+* ''Elo meleta kuti puzu reigunke.''
+* ''Ala varaida kolnut, varaida eläbad.''
+</blockquote>
+
 == Kacu mugažo ==
 * [[Elon tundused]]
 * [[Gomeostaz]]
