--- a/Eht.mw
+++ b/Eht.mw
@@ -3,9 +3,10 @@
 
 Necen aigan [[Päiväine]] sabustab [[gorizont]]ad da zavodiše [[tikahtuz]]; nece rippub [[voz'aig]]aspäi i sikš libub erazvuiččiš časuiš.
 
-== Ehtha sidotud vepsän muštatiž ==
+== Ehtha sidotud vepsän muštatišed ==
 <blockquote>
 * ''Elin päivän ehthasai.''
+* ''Mäni päiv, tuli eht — surm i lähemba.''
 </blockquote>
 
 {{stub}}
