*Empty MediaWiki Message*

--- a/Artut'.mw
+++ b/Artut'.mw
@@ -3,6 +3,8 @@
 {{Himine element|80|Artut'|Hg|200,592|HimMetall|2|8|18|32|18|2|0|}}
 '''Artut'''' (''Hg'' — ''hydrargyrum'' latinan kelel, amuižgrekan kelen ὕδωρ «vezi»- da ἄργυρος «hobed»-sanoišpäi) om 80nz' himine element [[Himižiden elementoiden periodine tablut|himižiden elementoiden periodižes tabludes]]. Sen sijaduz om kahtendestoštkümnendes gruppas (vanhtunuden klassifikacijan mödhe — kahtenden gruppan laptalagruppas), tabluden kudendes periodas.
 
+Metallan paginnimi oleleb ''eläb hobed''.
+
 == Ühthine ümbrikirjutand ==
 Element om harv londuses lujas (83 milligrammad tonnas), no om olmas artutin löudmižsijid äjiš valdkundoiš. Voib löuta sidä puhthas olendas mugažo, se om m. n. ičesündui artut'.
 
