--- a/Hobed.mw
+++ b/Hobed.mw
@@ -18,6 +18,9 @@ Londuseline hobed kogoneb kahtes stabiližes izotopaspäi: <sup>107</sup>Ag (51,
 == Samine ==
 Vl 2014 saihe 26,8 tuhad tonnoid mail'mas. Todištadud mail'man sadud varad oliba 360 tuhad tonnoid vl 1986, i ned poletas rajadusen tagut tegimištos. Vn 2018 heinkus hobed maksoi 15,5 US$ troižes uncijas vai 495 US$ kilogrammas. Sadas [[vas'k]]en, [[kuld]]an, [[hahktin]]an i [[cink]]an ümbriradmiženke tobjimalaz. Järedad tegijad oma [[Meksik]], [[Peru]] i [[Kitai]], mail'man samižen enamba pol't.
 
+== Kacu mugažo ==
+* [[Eläb hobed]]
+
 == Irdkosketused ==
 * [http://www.webelements.com/webelements/elements/text/Ag/key.html Hobed ''webelements.com''-saital.] {{ref-en}}
 * [http://n-t.ru/ri/ps/pb047.htm Kirjutuz hobedas Himižiden elementoiden populärižes ''n-t.ru''-kirjištos.] {{ref-ru}}
