--- a/Lidn.mw
+++ b/Lidn.mw
@@ -8,6 +8,11 @@ Nügüd'aigaižed lidnad jagasoiš penihe (vähemb 50 tuhad eläjid), keskmäiž
 
 [[Lidnansauvomine]] tedoidab lidnoiden šingotesen käskusid da ohjandimid.
 
+== Lidnha sidotud vepsän muštatiž ==
+<blockquote>
+* ''Ni küläs kündai, ni lidnas lendai.'' (nimihe ei sättu ristitun polhe)
+</blockquote>
+
 == Homaičendad ==
 <references />
 
