--- a/Jumal.mw
+++ b/Jumal.mw
@@ -19,6 +19,7 @@ Kaiked mail'madme 60..90% täuz'igäšt ristitištod uskotas Jumalha.
 * ''Mez' söb, mez' sab, mehele andab Jumal''.
 * ''Min Jumal andab, sen Mustikei kandab''.
 * ''Rahvahaspäi voib kaik sijad peitta, a Jumalaspäi ei voi''.
+* ''Sinun sana da jumalale korvha''.
 </blockquote>
 
 == Kacu mugažo ==
