--- a/Artöm_(lidn).mw
+++ b/Artöm_(lidn).mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Artöman lidnanznam
  | Flag text = Artöman flag
  | Valdkund = Venäma
- | Eläjiden lugu = 106,732
- | Voz' = 2017
+ | Eläjiden lugu = 104,926
+ | Voz' = 2021
  | Pind = 506.4
- | Fail = Дворец Культуры Угольщиков.jpg
- | Pämez' = Aleksandr Avdejev (2016—)
+ | Fail = Артём город коллаж.jpg
+ | Pämez' = Väčeslav Kvon<br />(sulaku 2020—)
  | Telefonkod = +7-42337-xxx-xx
  | Avtokod = 25. 125
  | Aigvö = [[UTC]]+10 (MSK+7)
@@ -25,10 +25,23 @@ Reljef om erazvuitte, om järvid, jogid da kukhid lidnas. Artöm sijadase Murav'
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 102 603 ristitud. Vspäi 2005 lidnümbrik om sätud, enččed Artomovskii-, Zavodskoi- da Uglovoje-radnikžilod nügüd' mülüdas lidnan territorijha, i lidnan ristitišt ližadui enamba pol'tošt kerdad.
 
+Edeline lidnümbrikon pämez' om Aleksandr Avdejev (sügüz'ku 2016 — uhoku 2020).
+
 == Ižanduz da transport ==
 Sadas burad hil't lidnümbrikos. Varažomiden zon, mägisuksiden «Sinine kukkaz»-lebutaho ({{lang-ru|Синяя сопка}}) da «Mererand»-azartvändzon ({{lang-ru|Приморье}}) oma läz lidnad.
 
 Vn 2016 sügüz'kuspäi avtoümbärte om olmas Artömas. Avtobusad da raudted oma kundaližeks transportaks lidnas da sen ümbrištos. Rahvahidenkeskeine soda- da civiline ''Vladivostok'' (''Kneviči'')-lendimport (''VVO / ВВО'') sijadase 3 km pohjoižhe lidnaspäi. Sišpäi tehtas reisid [[Kitai]]he, [[Pohjoižkorei|Pohjoižkorejha]] da [[Suvikorei|Suvikorejha]], čarterreisid [[Uzbekistan]]ha, mugažo Venämadme. Sodalendimbaz sijadase 9 km suvipäivlaskmha lendimportaspäi.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+RIAN archive 362412 Artemovsk thermal power station, Primorye.jpg|Artöman LEK vl 2008
+Artem. Hotel Venice (WR).tif|«Venecija»-adivpert' (2001)
+Дворец Культуры Угольщиков.jpg|Hilensajiden kul'turkeskuz (2013)
+Light trails from a MiG-31 taking off at Uglovaya airbase.jpg|Uglovai-sodail'mbaz vl 2015
+Bus station in Artem 10.jpg|Avtobusstancii vl 2018
+Международный аэропорт г. Владивосток.jpg|Rahvahidenkeskeižen Vladivostok-lendimportan terminal vl 2014
+クネヴィッチ駅舎.jpg|Kneviči-päraudtestancijan sauvuz Vladivostok-lendimportas vl 2017
+</gallery>
 
 == Irdkosketused ==
 * [http://www.artemorkug.ru/ Lidnümbrikon tobmuden aluzkundoiden oficialine sait (''artemorkug.ru'').] {{ref-ru}}
