--- a/Artöm_(lidn).mw
+++ b/Artöm_(lidn).mw
@@ -22,8 +22,10 @@ Eländpunktan aluz om pandud vl 1924 radnikžiloks samha [[bur hil'|burad hil't]
 == Geografijan andmused ==
 Reljef om erazvuitte, om järvid, jogid da kukhid lidnas. Artöm sijadase Murav'jov-Amurskijan pol'saren jurel, mägidenkeskeižes katl'uses, 40 m valdmeren pindan päl keskmäižel korktusel, mülütab [[Japonijan meri|Japonijan meren]] Amurskijan i Ussurijskan lahtiden randoid.
 
+Viž žilod mülüdas lidnümbrikho Artöm-lidnan ližaks: Kneviči (4845 rist. vl 2010), Krolevci, Olenii, Suraževk ({{lang-ru|Суражевка}}), Jasnoje.
+
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 102 603 ristitud. Vspäi 2005 lidnümbrik om sätud, enččed Artomovskii-, Zavodskoi- da Uglovoje-radnikžilod nügüd' mülüdas lidnan territorijha, i lidnan ristitišt ližadui enamba pol'tošt kerdad.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 102 603 ristitud. Vspäi 2005 lidnümbrik om sätud, enččed Artomovskii-, Zavodskoi- da Uglovoje-radnikžilod nügüd' mülüdas lidnan territorijha, i lidnan ristitišt ližadui enamba pol'tošt kerdad. Kaikiš suremb lidnan ristitišt oli 106 732 eläjad vl 2017, lidnümbrikon — 116 284 eläjad sil-žo vodel, mugažo 117 974 ristitud elihe nügüdläižen lidnümbrikon territorijal vl 1979.
 
 Edeline lidnümbrikon pämez' om Aleksandr Avdejev (sügüz'ku 2016 — uhoku 2020).
 
