--- a/Nahotk.mw
+++ b/Nahotk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Nahotkan lidnanznam
  | Flag text = Nahotkan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 151,420
- | Voz' = 2017
- | Pind =
+ | Eläjiden lugu = 142,673
+ | Voz' = 2021
+ | Pind = 325.9
  | Fail = Nakhodka сollage.jpg
- | Pämez' = Andrei Gorelov<br />(keväz'ku 2016—)
+ | Pämez' = Timur Maginskii<br />(heinku 2020—)
  | Telefonkod = +7-4236-xxx-xxx
  | Avtokod = 25. 125
  | Aigvö = [[UTC]]+10 (MSK+7)
@@ -24,10 +24,26 @@ Nimitihe lahted Nahotkaks Päivnouzmaižen Sibirin Nikolai Murav'jov-Amurskii-je
 == Geografijan andmused ==
 Lidn sijadase [[Japonijan meri|Japonijan meren]] i sen Nahotkan merikaran lodehližel randal, Trudnii-pol'sarel, 8 m ü.m.t. keskmäižel korktusel. Matkad [[Vladivostok]]hasai om 80 km päivlaskmha orhal vai 170 km avtotedme. Lähembaižed lidnad — [[Fokino]] 50 km lodeheze avtotedme i [[Partizansk]] 50 km pohjoižpäivnouzmha avtol vai raudtedme. [[Transsib]]an sarak tuleb meriportha Vladivostokaspäi. Lidn vedase pidust' randad 20 kilometras, lidnümbrik — 200 kilometras keskustoidenke, röunatab [[Partizanskan rajon]]anke.
 
-Koume žilod mülüdas lidnümbrikho Nahotkan ližaks: Duškino, Ann i Beregovoi. Lidnümbrikon pind — 360,36 km².
+Koume žilod mülüdas lidnümbrikho Nahotkan ližaks: Duškino (563 rist. vl 2010), Ann ({{lang-ru|Анна}}) i Beregovoi. Lidnümbrikon pind — 360,36 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 159 719 ristitud, lidnümbrikon — 160 760 ristitud. Kaikiš suremb lidnan ristitišt oli 173 500 eläjad vl 2005, lidnümbrikon röunoiš — 186 868 eläjad vl 1989. Vl 2017 kaik 152 294 ristitud elädas lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 159 719 ristitud, lidnümbrikon — 160 760 ristitud. Kaikiš suremb lidnan ristitišt oli 173 500 eläjad vl 2005, lidnümbrikon röunoiš — 186 868 eläjad vl 1989. Vl 2017 kaik 151 420 ristitud elihe lidnas i 152 294 ristitud kaikes lidnümbrikos.
+
+Edeližed lidnümbrikon pämehed oma Andrei Gorelov (keväz'ku 2016 — sulaku 2018) i Boris Gladkih (sulaku 20 — heinku 2020).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Town Hall in Nakhodka.JPG|Lidnümbrikon Administracijan i Duman sauvused (2010)
+Prisco headquarters in Nakhodka.JPG|Mererandaližen laivkompanijan päfater (2010)
+Cathedral of the Theotokos of Qazan - panoramio.jpg|Jumalanmaman Kazanin jumalaižen kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2013 nägu
+Nakhodka from West.jpg|Lidnan nägu päivlaskmaspäi (2008)
+Порт Восточный.jpg|Vostočnii-meriportan konteinerterminal vl 2003
+Business center in Nakhodka.JPG|«Nahodka»-bizneskeskuz vl 2010
+НМШ.jpg|Nahotkan meriškol (2015)
+Иллюzion (Находка).jpg|«Illüzion»-torguindkeskuz (2018)
+Railway station in Nakhodka.JPG|''Tün'valdmerine''-päraudtestancijan ({{lang-ru|Тихоокеанская}}) sauvuz vl 2010
+Seaport buildings.JPG|Merivagzalan sauvuz (2010, oli rados vll 1993−1998, kävutase ofispertikš, vedadas korporativoid)
+</gallery>
 
 == Irdkosketused ==
 * [http://www.nakhodka-city.ru/ Lidnümbrikon tobmuden aluzkundoiden oficialine sait (''nakhodka-city.ru'').] {{ref-ru}} {{ref-en}}
