*Empty MediaWiki Message*

--- a/Nahotk.mw
+++ b/Nahotk.mw
@@ -29,7 +29,7 @@ Koume žilod mülüdas lidnümbrikho Nahotkan ližaks: Duškino (563 rist. vl 20
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 159 719 ristitud, lidnümbrikon — 160 760 ristitud. Kaikiš suremb lidnan ristitišt oli 173 500 eläjad vl 2005, lidnümbrikon röunoiš — 186 868 eläjad vl 1989. Vl 2017 kaik 151 420 ristitud elihe lidnas i 152 294 ristitud kaikes lidnümbrikos.
 
-Edeližed lidnümbrikon pämehed oma Andrei Gorelov (keväz'ku 2016 — sulaku 2018) i Boris Gladkih (sulaku 20 — heinku 2020).
+Edeližed lidnümbrikon pämehed oma Andrei Gorelov (keväz'ku 2016 — sulaku 2018) i Boris Gladkih (sulaku 2018 — heinku 2020).
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
@@ -37,7 +37,7 @@ Town Hall in Nakhodka.JPG|Lidnümbrikon Administracijan i Duman sauvused (2010)
 Prisco headquarters in Nakhodka.JPG|Mererandaližen laivkompanijan päfater (2010)
 Cathedral of the Theotokos of Qazan - panoramio.jpg|Jumalanmaman Kazanin jumalaižen kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2013 nägu
 Nakhodka from West.jpg|Lidnan nägu päivlaskmaspäi (2008)
-Порт Восточный.jpg|Vostočnii-meriportan konteinerterminal vl 2003
+Порт Восточный.jpg|Päivnouzmaine-meriportan konteinerterminal vl 2003
 Business center in Nakhodka.JPG|«Nahodka»-bizneskeskuz vl 2010
 НМШ.jpg|Nahotkan meriškol (2015)
 Иллюzion (Находка).jpg|«Illüzion»-torguindkeskuz (2018)
