--- a/Laps'.mw
+++ b/Laps'.mw
@@ -19,6 +19,7 @@
 * ''Ku laps' vajeht ei kule, ka löndad-ki ei varaida.''
 * ''Kut lapsen kazvatad, ka sidä lapsespäi varasta-ki.''
 * ''Laps' ei väriže, ka mam ei kacuhta.''
+* ''Laps' om kuti živat.''
 * ''Lapsen kazvatada, kuti palabidme hilidme kävelta.''
 * ''Lapsen kazvatades näged zor'an noustes.''
 * ''Lapsen kündlihe ed upta.''
@@ -26,8 +27,9 @@
 * ''Laskav laps' kaks' mamad imeb.''
 * ''Mam sötab lapsen nižal, ma leibäl.''
 * ''Maman heng palab lapsehe, a lapsen kivehe.'' (lapsiš kitändata)
-* ''Openda last, kuni om nor'.''
+* ''Openda last, kuni mučuine (kuni om nor').''
 * ''Openda last kuni poikpoli sijas magadab.''
+* ''Pahemb laps' paimnehe.''
 * ''Pen't ed kazvata, ka surt ed homaiče.''
 * ''Sündutada last om kibed, a kazvatada om jüged.''
 * ''Vagahašt söta näčotesel, a last — opendusel.''
